[package]
name = "cpu"
version = "0.1.0"
authors = ["Oliver Hunt <oliver@nerget.com>"]
edition = "2018"
build = "build.rs" # LALRPOP preprocessing


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = "0.17.2"
regex = "1.3.1"

[build-dependencies]
lalrpop = "0.17.2"
