[package]
name = "waffle_sim"
version = "0.1.0"
authors = ["Oliver Hunt <oliver@nerget.com>"]
edition = "2018"
build = "build.rs" # LALRPOP preprocessing

[lib]
name = "libwaffle_sim"
path = "src/lib.rs"

[dependencies]
lalrpop-util = "0.17.2"
regex = "1.3.1"

[build-dependencies]
lalrpop = "0.17.2"


[[example]]
name = "parser"
path = "examples/parser.rs"
lto = true